Open java.base packages to Robolectric on every test task
Robolectric 4.17 sets the raw FileDescriptor through reflection when an
Android 16 or later SDK boots ApplicationSharedMemory. JDK 17 and later
refuse that access unless java.base/java.io is opened to the unnamed
module, so every module running Robolectric on those SDKs failed before
its first test with "Failed to interact with raw FileDescriptor
internals".

Pass the flags Robolectric documents for JDK 17 and later from
Test.setupTests(), which already runs on every Test task the android,
jvm and multiplatform plugins configure. A consumer no longer needs a
subprojects block in its root build script to pass them itself.

The flags only open packages to the unnamed module, so a JVM module that
never reflects into them is unaffected.